Completed the task
- Added CRUD for customers.
- Implemented admin mail notifications on customer creation.
- Implemented scheduled good morning mails for customers of specific country and post code.

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,14 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
+# These are for the mail sending functionality
+MAIL_MAILER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM_ADDRESS=
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
